# eki-tsunagi

./: .gitignore  CLAUDE.md  README.md  add_walking.py  area.json  area_ts.json  build_graph.py  check.py  extract_line_stations.py  fuga.py  generate_all_quizzes.py  generate_guess_problems.py  generate_quiz.py  graph.json  graph.py  graph_with_ids.json  graph_with_ids_walking.json  graph_with_pos.json  graph_with_pos_walking.json  graph_with_walking.json  hoge.py  main.py  nagoya.py  pyproject.toml  quizzes_central_10.json  quizzes_east_10.json  quizzes_south_10.json  requirements.txt  simulate_quiz.py  test_quiz.json  test_quiz_mixed.json  utils.py
.streamlit/: config.toml
config/: nagoya.json  osaka.json  tokyo.json
output/: all_lines.json  graph_nagoya.json  graph_nagoya_walking.json  graph_osaka.json  graph_osaka_walking.json  graph_tokyo.json  graph_tokyo_walking.json  lines_tokyo.json
output/guess/: guess_problems_central.json  guess_problems_east.json  guess_problems_nagoya.json  guess_problems_north.json  guess_problems_osaka.json  guess_problems_south.json  guess_problems_west.json  guess_problems_yokohama.json  summary.json
output/unite/: quiz_generation_summary_20250721_101926.json  quiz_generation_summary_20250721_141939.json  quiz_generation_summary_20250721_211855.json  quizzes_central.json  quizzes_central_10.json  quizzes_east.json  quizzes_east_10.json  quizzes_nagoya.json  quizzes_nagoya_10.json  quizzes_north.json  quizzes_west.json  (+8 more)
static/: index.html
test_min_components/: quiz_generation_summary_20250721_141800.json  quizzes_central_2.json
