[tool.poetry]
name = "eki-guesser"
version = "0.1.0"
description = ""
authors = ["guglilac <x7deed53bc9k8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "^1.45.0"
pydantic = "^2.11.4"
streamlit-modal = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
